--- a/src/components/Background/Background.module.css
+++ b/src/components/Background/Background.module.css
@@ -1,4 +1,14 @@
 .background {
-    padding: 74px 24px 81px;
-    background-color: var(--light-blue);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+}
+
+@media only screen and (min-width: 1400px) {
+    .background {
+        flex-wrap: nowrap;
+    }
 }
