--- a/src/components/Title/Title.module.css
+++ b/src/components/Title/Title.module.css
@@ -6,3 +6,13 @@
     color: var(--very-dark-blue);
     margin: unset;
 }
+
+@media only screen and (min-width: 1400px) {
+
+    .title h1 {
+        font-size: 20px;
+        line-height: 28px;
+        letter-spacing: .25px;
+    }
+
+}
