--- a/src/index.css
+++ b/src/index.css
@@ -8,14 +8,24 @@
   --light-blue: hsl(210, 46%, 95%);
 }
 
-body {
-  margin: 0;
-  font-family: var(--font);
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: var(--font);
+  max-height: 100vh;
+  min-height: 100vh;
+  max-width: 100vw;
+  padding: 74px 24px 81px;
+  background-color: var(--light-blue);
+}
+
+@media only screen and (min-width: 1100px) {
+  body {
+    padding: 260px 355px;
+  }
 }
